[package]
name = "tezos-ico-password-finder"
version = "0.1.0"
authors = ["tezoskoreadeveloper@gmail.com"]

[dependencies]
rust-crypto = "^0.2"
sha2 = "0.8.0"
sodiumoxide = { git = "https://github.com/sodiumoxide/sodiumoxide" }
blake2_c = "0.3.3"
num-bigint = "0.2"
num-traits = "0.2.6"
itertools = "0.7.3"
unicode-normalization = "0.1.7"
